@@ -76,42 +76,45 @@ except ImportError:  # pragma: no cover
     class Path:
         pass
 
-# TODO: remove this? Or at least move it, flake8 complains.
-if sys.platform == "win32":
-    libdir = os.path.join(os.path.dirname(__file__), ".libs")
-    os.environ["PATH"] = os.environ["PATH"] + ";" + libdir
+if platform.system() == "Windows":
+    _whl_dir = os.path.join(os.path.dirname(__file__), ".libs")
+    if os.path.exists(_whl_dir):
+        os.add_dll_directory(_whl_dir)
+    else:
+        if "PATH" in os.environ:
+            for p in os.environ["PATH"].split(os.pathsep):
+                if glob.glob(os.path.join(p, "gdal*.dll")):
+                    os.add_dll_directory(p)
 
-import fiona._loading
 
-with fiona._loading.add_gdal_dll_directories():
-    from fiona.collection import BytesCollection, Collection
-    from fiona.drvsupport import supported_drivers
-    from fiona.env import ensure_env_with_credentials, Env
-    from fiona.errors import FionaDeprecationWarning
-    from fiona._env import driver_count
-    from fiona._env import (
-        calc_gdal_version_num,
-        get_gdal_version_num,
-        get_gdal_release_name,
-        get_gdal_version_tuple,
-    )
-    from fiona.io import MemoryFile
-    from fiona.ogrext import (
-        _bounds,
-        _listlayers,
-        _listdir,
-        FIELD_TYPES_MAP,
-        _remove,
-        _remove_layer,
-    )
-    from fiona.path import ParsedPath, parse_path, vsi_path
-    from fiona.vfs import parse_paths as vfs_parse_paths
-    from fiona._show_versions import show_versions
+from fiona.collection import BytesCollection, Collection
+from fiona.drvsupport import supported_drivers
+from fiona.env import ensure_env_with_credentials, Env
+from fiona.errors import FionaDeprecationWarning
+from fiona._env import driver_count
+from fiona._env import (
+    calc_gdal_version_num,
+    get_gdal_version_num,
+    get_gdal_release_name,
+    get_gdal_version_tuple,
+)
+from fiona.io import MemoryFile
+from fiona.ogrext import (
+    _bounds,
+    _listlayers,
+    _listdir,
+    FIELD_TYPES_MAP,
+    _remove,
+    _remove_layer,
+)
+from fiona.path import ParsedPath, parse_path, vsi_path
+from fiona.vfs import parse_paths as vfs_parse_paths
+from fiona._show_versions import show_versions
 
-    # These modules are imported by fiona.ogrext, but are also import here to
-    # help tools like cx_Freeze find them automatically
-    from fiona import _geometry, _err, rfc3339
-    import uuid
+# These modules are imported by fiona.ogrext, but are also import here to
+# help tools like cx_Freeze find them automatically
+from fiona import _geometry, _err, rfc3339
+import uuid
 
 
 __all__ = ['bounds', 'listlayers', 'listdir', 'open', 'prop_type', 'prop_width']
